3RD COMMIT - ADD displayname

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,7 @@
 <br>
 <a routerLink="showhellobutton">#2.ShowHelloButton</a>
 <br>
+<a routerLink="displayname">#3.DisplayName</a>
+<br>
 
 <router-outlet></router-outlet>
