4TH COMMIT - ADD counter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,8 @@
 <br>
 <a routerLink="displayname">#3.DisplayName</a>
 <br>
+<a routerLink="counter">#4.Counter</a>
+<br>
+
 
 <router-outlet></router-outlet>
