5TH COMMIT - ADD simpleform

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,8 @@
 <br>
 <a routerLink="counter">#4.Counter</a>
 <br>
+<a routerLink="simpleform">#5.Simpleform</a>
+<br>
 
 
 <router-outlet></router-outlet>
