6TH COMMIT - ADD userage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,8 @@
 <br>
 <a routerLink="simpleform">#5.Simpleform</a>
 <br>
+<a routerLink="userage">#6.Userage</a>
+<br>
 
 
 <router-outlet></router-outlet>
