7TH COMMIT - ADD usergreeting

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
 <br>
 <a routerLink="userage">#6.Userage</a>
 <br>
+<a routerLink="usergreeting">#7.Usergreeting</a>
+<br>
+
 
 
 <router-outlet></router-outlet>
