11TH COMMIT - ADD evenoddchecker

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,8 @@
 <br>
 <a routerLink="currencyconverter">#10.CurrencyConverter</a>
 <br>
+<a routerLink="evenoddchecker">#11.Evenoddchecker</a>
+<br>
 
 
 
