15TH COMMIT - ADD multiplicationtable

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,8 @@
 <br>
 <a routerLink="showusername">14.Showusername</a>
 <br>
+<a routerLink="multiplicationtable">15.MultiplicationTable</a>
+<br>
 
 
 
