16TH COMMIT - ADD simplelogin

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,8 @@
 <br>
 <a routerLink="multiplicationtable">15.MultiplicationTable</a>
 <br>
+<a routerLink="simplelogin">16.SimpleLogin</a>
+<br>
 
 
 
