17TH COMMIT - ADD fahrenheittocelsius

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,8 @@
 <br>
 <a routerLink="simplelogin">16.SimpleLogin</a>
 <br>
+<a routerLink="fahrenheittocelsius">17.Fahrenheittocelsius</a>
+<br>
 
 
 
