18TH COMMIT - ADD booklist

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,8 @@
 <br>
 <a routerLink="fahrenheittocelsius">17.Fahrenheittocelsius</a>
 <br>
+<a routerLink="bookmarklist">18.bookmarklist</a>
+<br>
 
 
 
