--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,6 +34,8 @@
 <br>
 <a routerLink="bookmarklist">18.bookmarklist</a>
 <br>
+<a routerLink="charactercounter">19.CharacterCounterg</a>
+<br>
 
 
 
