20TH COMMIT - ADD palindomechecker

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,9 @@
 <br>
 <a routerLink="bookmarklist">18.bookmarklist</a>
 <br>
-<a routerLink="charactercounter">19.CharacterCounterg</a>
+<a routerLink="charactercounter">19.CharacterCounter</a>
+<br>
+<a routerLink="palindromechecker">20.palindromechecker</a>
 <br>
 
 
