21TH COMMIT - ADD temperatureconverter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,8 @@
 <br>
 <a routerLink="palindromechecker">20.palindromechecker</a>
 <br>
+<a routerLink="temperatureconverter">21.TemperatureConverter</a>
+<br>
 
 
 
