22TH COMMIT - ADD shoppinglist

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,6 +40,8 @@
 <br>
 <a routerLink="temperatureconverter">21.TemperatureConverter</a>
 <br>
+<a routerLink="shoppinglist">22.ShoppingList</a>
+<br>
 
 
 
