23TH COMMIT - ADD factorialcalculator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,8 @@
 <br>
 <a routerLink="shoppinglist">22.ShoppingList</a>
 <br>
+<a routerLink="factorialcalculator">23.FactorialCalculator</a>
+<br>
 
 
 
