24TH COMMIT - ADD todomanager

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,6 +44,8 @@
 <br>
 <a routerLink="factorialcalculator">23.FactorialCalculator</a>
 <br>
+<a routerLink="todomanager">24.TodoManager</a>
+<br>
 
 
 
