27 COMMIT - ADD randomnumbergenerator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,6 +50,8 @@
 <br>
 <a routerLink="wordcounter">26.WordCounter</a>
 <br>
+<a routerLink="randomnumbergenerator">27.RandomNumberGenerator</a>
+<br>
 
 
 
