28TH COMMIT - ADD multiplicationchecker

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,6 +52,8 @@
 <br>
 <a routerLink="randomnumbergenerator">27.RandomNumberGenerator</a>
 <br>
+<a routerLink="multiplicationchecker">28.MultiplicationChecker</a>
+<br>
 
 
 
