29TH COMMIT - ADD uppercaseconverter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,6 +54,8 @@
 <br>
 <a routerLink="multiplicationchecker">28.MultiplicationChecker</a>
 <br>
+<a routerLink="uppercaseconverter">29.UppercaseConverter</a>
+<br>
 
 
 
