30TH COMMIT - ADD wordshuffler

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,6 +56,8 @@
 <br>
 <a routerLink="uppercaseconverter">29.UppercaseConverter</a>
 <br>
+<a routerLink="wordshuffler">30.WordShuffler</a>
+<br>
 
 
 
