33TH COMMITS - ADD interestcalculator and removing #

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,24 @@
-<a routerLink="displayhelloworld">#1.DisplayHelloWorld</a>
+<a routerLink="displayhelloworld">1.DisplayHelloWorld</a>
 <br>
-<a routerLink="showhellobutton">#2.ShowHelloButton</a>
+<a routerLink="showhellobutton">2.ShowHelloButton</a>
 <br>
-<a routerLink="displayname">#3.DisplayName</a>
+<a routerLink="displayname">3.DisplayName</a>
 <br>
-<a routerLink="counter">#4.Counter</a>
+<a routerLink="counter">4.Counter</a>
 <br>
-<a routerLink="simpleform">#5.Simpleform</a>
+<a routerLink="simpleform">5.Simpleform</a>
 <br>
-<a routerLink="userage">#6.Userage</a>
+<a routerLink="userage">6.Userage</a>
 <br>
-<a routerLink="usergreeting">#7.Usergreeting</a>
+<a routerLink="usergreeting">7.Usergreeting</a>
 <br>
-<a routerLink="calculator">#8.Calculator</a>
+<a routerLink="calculator">8.Calculator</a>
 <br>
-<a routerLink="textlength">#9.TextLength</a>
+<a routerLink="textlength">9.TextLength</a>
 <br>
-<a routerLink="currencyconverter">#10.CurrencyConverter</a>
+<a routerLink="currencyconverter">10.CurrencyConverter</a>
 <br>
-<a routerLink="evenoddchecker">#11.Evenoddchecker</a>
+<a routerLink="evenoddchecker">11.Evenoddchecker</a>
 <br>
 <a routerLink="wordreverser">12.Wordreverser</a>
 <br>
@@ -62,7 +62,8 @@
 <br>
 <a routerLink="usernamevalidator">32.UsernameValidator</a>
 <br>
-
+<a routerLink="interestcalculator">33.InterestCalculator</a>
+<br>
 
 
 
