--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,6 +64,8 @@
 <br>
 <a routerLink="interestcalculator">33.InterestCalculator</a>
 <br>
+<a routerLink="compoundinterestcalculator">34.CompoundInterestCalculator</a>
+<br>
 
 
 
