34TH COMMITS - ADD fibonaccigenerator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,7 +64,7 @@
 <br>
 <a routerLink="interestcalculator">33.InterestCalculator</a>
 <br>
-<a routerLink="compoundinterestcalculator">34.CompoundInterestCalculator</a>
+<a routerLink="fibonaccigenerator">34.FibonacciGenerator</a>
 <br>
 
 
