35TH COMMIT - ADD oddsumcalculator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,6 +66,9 @@
 <br>
 <a routerLink="fibonaccigenerator">34.FibonacciGenerator</a>
 <br>
+<a routerLink="oddsumcalculator">35.OddSumCalculator</a>
+<br>
+
 
 
 
