37TH COMMIT - ADD currencyformatter- Arranging number 35.FibonnaciGenerator and 36.OddSumCalculator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,10 +64,15 @@
 <br>
 <a routerLink="interestcalculator">33.InterestCalculator</a>
 <br>
-<a routerLink="fibonaccigenerator">34.FibonacciGenerator</a>
+<a routerLink="compoundinterestcalculator">34.CompoundInterestCalculator</a>
 <br>
-<a routerLink="oddsumcalculator">35.OddSumCalculator</a>
+<a routerLink="fibonaccigenerator">35.FibonacciGenerator</a>
 <br>
+<a routerLink="oddsumcalculator">36.OddSumCalculator</a>
+<br>
+<a routerLink="currencyformatter">37.CurrencyFormatter</a>
+<br>
+
 
 
 
