38TH COMMITS - ADD randomquotedisplay

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,6 +72,9 @@
 <br>
 <a routerLink="currencyformatter">37.CurrencyFormatter</a>
 <br>
+<a routerLink="randomquotedisplay">38.RandomQuotedDisplay</a>
+<br>
+
 
 
 
