39TH COMMITS - ADD uppercasegreetings

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -74,6 +74,8 @@
 <br>
 <a routerLink="randomquotedisplay">38.RandomQuotedDisplay</a>
 <br>
+<a routerLink="uppercasegreeting">39.UppercaseGreeting</a>
+<br>
 
 
 
