40TH COMMITS - ADD divisiblechecker

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -76,7 +76,8 @@
 <br>
 <a routerLink="uppercasegreeting">39.UppercaseGreeting</a>
 <br>
-
+<a routerLink="divisiblechecker">40.DivisibleChecker</a>
+<br>
 
 
 
