41th COMMITS - ADD dailyjournal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,6 +78,8 @@
 <br>
 <a routerLink="divisiblechecker">40.DivisibleChecker</a>
 <br>
+<a routerLink="dailyjournal">41.DailyJournal</a>
+<br>
 
 
 
