43TH COMMIT - ADD simpleflashlight

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,6 +82,8 @@
 <br>
 <a routerLink="simpleregister">42.SimpleRegister</a>
 <br>
+<a routerLink="simpleflashlight">43.SimpleFlashlight</a>
+<br>
 
 
 
