47TH COMMIT - ADD divisiontable

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -90,6 +90,11 @@
 <br>
 <a routerLink="divisionchecker">46.DivisionChecker</a>
 <br>
+<a routerLink="divisionchecker">46.DivisionChecker</a>
+<br>
+<a routerLink="divisiontable">47.DivisionTable</a>
+<br>
+
 
 
 
